// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inputs Bad source input 1`] = `"Input template is type number but must be type string."`;

exports[`Lexer Illegal binding names 1`] = `
"There's a problem with template [no name]

Parse error at character 6.
  \\"null\\" is a reserved name
"
`;

exports[`Lexer Illegal binding names 2`] = `
"There's a problem with template [no name]

Parse error at character 6.
  \\"false\\" is a reserved name
"
`;

exports[`Lexer Illegal characters 1`] = `
"There's a problem with template [no name]

Syntax error at character 11.
  Invalid character: \\"*\\".
"
`;

exports[`Lexer Illegal characters 2`] = `
"There's a problem with template [no name]

Syntax error at character 6.
  Unexpected character: \\". %\\".
Expected: \\"...\\".
"
`;

exports[`Lexer Illegal characters 3`] = `
"There's a problem with template [no name]

Syntax error at character 13.
  Unexpected character: \\"%\\".
Expected: \\"}\\".
"
`;

exports[`Lexer Illegal characters 4`] = `
"There's a problem with template [no name]

Syntax error at character 10.
  Unexpected character: \\"%}\\".
Expected: \\"}}\\".
"
`;

exports[`Lexer Illegal characters 5`] = `
"There's a problem with template [no name]

Syntax error at character 10.
  Unexpected character: \\"b \\".
Expected: \\"}}\\".
"
`;

exports[`Lexer Illegal characters 6`] = `
"There's a problem with template [no name]

Syntax error at character 6.
  Invalid character: \\"?\\".
"
`;

exports[`Lexer Other stuff 1`] = `
"There's a problem with template [no name]

Syntax error at character 7.
  Unterminated string.
"
`;

exports[`Lexer Other stuff 2`] = `
"There's a problem with template [no name]

Syntax error at character 5.
  Unterminated comment.
"
`;

exports[`Lexer Other stuff 3`] = `
"There's a problem with template [no name]

Syntax error at character 5.
  Unterminated comment.
"
`;

exports[`Lexer Other stuff 4`] = `
"There's a problem with template [no name]

Syntax error at character 7.
  Unexpected end of file.
"
`;

exports[`Lexer Other stuff 5`] = `
"There's a problem with template [no name]

Parse error at character 6.
  \\"--1\\" is an illegal identifier name.
"
`;

exports[`Parser Invalid statements 1`] = `
"There's a problem with template [no name]

Parse error at character 6.
  Invalid statement: \\"c\\".
"
`;

exports[`Parser Unexpected tokens 1`] = `
"There's a problem with template [no name]

Parse error at character 6.
  Unexpected token: \\"{\\".
"
`;

exports[`Parser Unexpected tokens 2`] = `
"There's a problem with template [no name]

Parse error at character 6.
  Unexpected token: \\"[\\".
"
`;

exports[`Parser Unexpected tokens 3`] = `
"There's a problem with template [no name]

Parse error at character 6.
  Unexpected token: \\"}\\".
"
`;

exports[`Parser Unexpected tokens 4`] = `
"There's a problem with template [no name]

Parse error at character 6.
  Unexpected token: \\"]\\".
"
`;

exports[`Parser Unexpected tokens 5`] = `
"There's a problem with template [no name]

Parse error at character 6.
  Unexpected token: \\",\\".
"
`;

exports[`Parser Unexpected tokens 6`] = `
"There's a problem with template [no name]

Parse error at character 10.
  Unexpected token: \\"/\\".
"
`;

exports[`Parser Unexpected tokens 7`] = `
"There's a problem with template [no name]

Parse error at character 6.
  Unexpected token: \\":\\".
"
`;

exports[`Parser Unexpected tokens 8`] = `
"There's a problem with template [no name]

Parse error at character 6.
  Unexpected token: \\"\\"a\\"\\".
"
`;

exports[`Parser Unexpected tokens 9`] = `
"There's a problem with template [no name]

Parse error at character 6.
  Unexpected token: \\"1\\".
"
`;

exports[`Parser Unexpected tokens 10`] = `
"There's a problem with template [no name]

Parse error at character 10.
  Unexpected token: \\"[\\".
"
`;

exports[`Parser Unexpected tokens 11`] = `
"There's a problem with template [no name]

Parse error at character 10.
  Unexpected token: \\"1\\".
"
`;

exports[`Parser Unexpected tokens 12`] = `
"There's a problem with template [no name]

Parse error at character 10.
  \\"null\\" is a reserved name
"
`;

exports[`Parser Unexpected tokens 13`] = `
"There's a problem with template [no name]

Parse error at character 13.
  Unexpected token: \\"[\\".
"
`;

exports[`Parser Unexpected tokens 14`] = `
"There's a problem with template [no name]

Parse error at character 13.
  Unexpected token: \\"1\\".
"
`;

exports[`Parser Unexpected tokens 15`] = `
"There's a problem with template [no name]

Parse error at character 13.
  \\"null\\" is a reserved name
"
`;

exports[`Parser Unexpected tokens 16`] = `
"There's a problem with template [no name]

Parse error at character 29.
  Unexpected token: \\"[end of file]\\".
"
`;

exports[`Parser Unexpected tokens 17`] = `
"There's a problem with template [no name]

Parse error at character 32.
  Unexpected token: \\"[end of file]\\".
"
`;

exports[`Parser Unexpected tokens 18`] = `
"There's a problem with template [no name]

Parse error at character 6.
  Unexpected token: \\"/\\".
"
`;

exports[`Parser Unexpected tokens 19`] = `
"There's a problem with template [no name]

Parse error at character 9.
  Unexpected token: \\"[end of file]\\".
"
`;

exports[`Parser Unexpected tokens 20`] = `
"There's a problem with template [no name]

Parse error at character 8.
  Unexpected token: \\"#\\".
"
`;

exports[`Parser Unexpected tokens 21`] = `
"There's a problem with template [no name]

Parse error at character 22.
  Unexpected token: \\"[end of file]\\".
"
`;

exports[`Parser Unexpected tokens 22`] = `
"There's a problem with template [no name]

Parse error at character 8.
  Unexpected token: \\"1\\".
"
`;

exports[`Patterns Count mismatch failure 1`] = `
"There's a problem with template [no name]

Pattern Matching error at character 4.
  The number of patterns does not match the number of data.
"
`;

exports[`Patterns Count mismatch failure 2`] = `
"There's a problem with template [no name]

Pattern Matching error at character 8.
  The number of patterns does not match the number of data.
"
`;

exports[`Patterns Illegal bindings 1`] = `
"There's a problem with template [no name]

Parse error at character 25.
  Unexpected token: \\"Abc\\".
"
`;

exports[`Patterns Illegal bindings 2`] = `
"There's a problem with template [no name]

Parse error at character 24.
  \\"null\\" is an illegal identifier name.
"
`;

exports[`Patterns Illegal bindings 3`] = `
"There's a problem with template [no name]

Parse error at character 24.
  \\"true\\" is an illegal identifier name.
"
`;

exports[`Patterns Illegal bindings 4`] = `
"There's a problem with template [no name]

Parse error at character 25.
  \\"false\\" is an illegal identifier name.
"
`;

exports[`Patterns Illegal bindings 5`] = `
"There's a problem with template [no name]

Parse error at character 26.
  \\"1\\" is an illegal identifier name.
"
`;

exports[`Patterns Illegal bindings 6`] = `
"There's a problem with template [no name]

Parse error at character 8.
  \\"null\\" is a reserved name
"
`;

exports[`Patterns Illegal bindings 7`] = `
"There's a problem with template [no name]

Parse error at character 8.
  \\"null\\" is a reserved name
"
`;

exports[`Patterns Illegal bindings 8`] = `
"There's a problem with template [no name]

Parse error at character 8.
  Unexpected token: \\"1\\".
"
`;

exports[`Patterns Match failure 1`] = `
"There's a problem with template [no name]

Pattern matching error at character 5.
  None of the patterns match the data. Consider a catch-all case to avoid this.
"
`;

exports[`Patterns Match failure 2`] = `
"There's a problem with template [no name]

Pattern matching error at character 9.
  None of the patterns match the data. Consider a catch-all case to avoid this.
"
`;

exports[`Patterns Missing bindings 1`] = `
"There's a problem with template [no name]

Render error at character 9.
  Binding \\"b\\" does not exist.
"
`;

exports[`Patterns Missing bindings 2`] = `
"There's a problem with template [no name]

Render error at character 15.
  Binding \\"b\\" does not exist.
"
`;

exports[`Patterns Missing bindings 3`] = `
"There's a problem with template [no name]

Pattern error at character 8.
  Type mismatch: \\"c\\" is type array but the data is type null.
"
`;

exports[`Patterns Type errors Boolean pattern 1`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type boolean but the data is type string.
"
`;

exports[`Patterns Type errors Boolean pattern 2`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type boolean but the data is type string.
"
`;

exports[`Patterns Type errors Boolean pattern 3`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type boolean but the data is type number.
"
`;

exports[`Patterns Type errors Boolean pattern 4`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type boolean but the data is type number.
"
`;

exports[`Patterns Type errors Boolean pattern 5`] = `
"There's a problem with template [no name]

Type error at character 21.
  This pattern is type boolean but the data is type array.
"
`;

exports[`Patterns Type errors Boolean pattern 6`] = `
"There's a problem with template [no name]

Type error at character 21.
  This pattern is type boolean but the data is type array.
"
`;

exports[`Patterns Type errors Boolean pattern 7`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type boolean but the data is type object.
"
`;

exports[`Patterns Type errors Object pattern 1`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type object but the data is type string.
"
`;

exports[`Patterns Type errors Object pattern 2`] = `
"There's a problem with template [no name]

Type error at character 21.
  This pattern is type object but the data is type boolean.
"
`;

exports[`Patterns Type errors Object pattern 3`] = `
"There's a problem with template [no name]

Type error at character 21.
  This pattern is type object but the data is type boolean.
"
`;

exports[`Patterns Type errors Object pattern 4`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type object but the data is type boolean.
"
`;

exports[`Patterns Type errors Object pattern 5`] = `
"There's a problem with template [no name]

Type error at character 21.
  This pattern is type object but the data is type array.
"
`;

exports[`Patterns Type errors Object pattern 6`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type object but the data is type number.
"
`;

exports[`Patterns Type errors Object pattern 7`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type object but the data is type number.
"
`;

exports[`Patterns Type errors array pattern 1`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type array but the data is type string.
"
`;

exports[`Patterns Type errors array pattern 2`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type array but the data is type string.
"
`;

exports[`Patterns Type errors array pattern 3`] = `
"There's a problem with template [no name]

Type error at character 21.
  This pattern is type array but the data is type boolean.
"
`;

exports[`Patterns Type errors array pattern 4`] = `
"There's a problem with template [no name]

Type error at character 21.
  This pattern is type array but the data is type boolean.
"
`;

exports[`Patterns Type errors array pattern 5`] = `
"There's a problem with template [no name]

Type error at character 21.
  This pattern is type array but the data is type boolean.
"
`;

exports[`Patterns Type errors array pattern 6`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type array but the data is type boolean.
"
`;

exports[`Patterns Type errors array pattern 7`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type array but the data is type number.
"
`;

exports[`Patterns Type errors array pattern 8`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type array but the data is type object.
"
`;

exports[`Patterns Type errors array pattern 9`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type array but the data is type object.
"
`;

exports[`Patterns Type errors number pattern 1`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type number but the data is type string.
"
`;

exports[`Patterns Type errors number pattern 2`] = `
"There's a problem with template [no name]

Type error at character 21.
  This pattern is type number but the data is type boolean.
"
`;

exports[`Patterns Type errors number pattern 3`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type number but the data is type boolean.
"
`;

exports[`Patterns Type errors number pattern 4`] = `
"There's a problem with template [no name]

Type error at character 21.
  This pattern is type number but the data is type array.
"
`;

exports[`Patterns Type errors number pattern 5`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type number but the data is type object.
"
`;

exports[`Patterns Type errors string pattern 1`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type string but the data is type number.
"
`;

exports[`Patterns Type errors string pattern 2`] = `
"There's a problem with template [no name]

Type error at character 21.
  This pattern is type string but the data is type boolean.
"
`;

exports[`Patterns Type errors string pattern 3`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type string but the data is type boolean.
"
`;

exports[`Patterns Type errors string pattern 4`] = `
"There's a problem with template [no name]

Type error at character 21.
  This pattern is type string but the data is type array.
"
`;

exports[`Patterns Type errors string pattern 5`] = `
"There's a problem with template [no name]

Type error at character 22.
  This pattern is type string but the data is type object.
"
`;

exports[`Patterns Unexpected tokens 1`] = `
"There's a problem with template [no name]

Parse error at character 17.
  Unexpected token: \\"}\\".
"
`;

exports[`Patterns Unexpected tokens 2`] = `
"There's a problem with template [no name]

Parse error at character 18.
  Unexpected token: \\",\\".
"
`;

exports[`Patterns Unexpected tokens 3`] = `
"There's a problem with template [no name]

Parse error at character 18.
  Unexpected token: \\"1\\".
"
`;

exports[`Patterns Unexpected tokens 4`] = `
"There's a problem with template [no name]

Parse error at character 22.
  Unexpected token: \\"[\\".
"
`;

exports[`Patterns Unexpected tokens 5`] = `
"There's a problem with template [no name]

Parse error at character 20.
  Unexpected token: \\"\\"a\\"\\".
"
`;

exports[`Patterns Unexpected tokens 6`] = `
"There's a problem with template [no name]

Parse error at character 21.
  Unexpected token: \\",\\".
"
`;

exports[`Patterns Unexpected tokens 7`] = `
"There's a problem with template [no name]

Parse error at character 24.
  Unexpected token: \\"\\"a\\"\\".
"
`;

exports[`Patterns Unexpected tokens 8`] = `
"There's a problem with template [no name]

Parse error at character 24.
  Unexpected token: \\"{\\".
"
`;

exports[`Patterns Unexpected tokens 9`] = `
"There's a problem with template [no name]

Parse error at character 26.
  Unexpected token: \\"[\\".
"
`;

exports[`Patterns Unexpected tokens 10`] = `
"There's a problem with template [no name]

Parse error at character 26.
  Unexpected token: \\"b\\".
"
`;

exports[`Patterns Unexpected tokens 11`] = `
"There's a problem with template [no name]

Parse error at character 20.
  Unexpected token: \\"b\\".
"
`;

exports[`Patterns Unexpected tokens 12`] = `
"There's a problem with template [no name]

Parse error at character 20.
  Unexpected token: \\"]\\".
"
`;

exports[`Patterns Unexpected tokens 13`] = `
"There's a problem with template [no name]

Parse error at character 12.
  Unexpected token: \\"}\\".
"
`;

exports[`Patterns Unexpected tokens 14`] = `
"There's a problem with template [no name]

Parse error at character 12.
  Unexpected token: \\"match\\".
"
`;

exports[`Patterns Unexpected tokens 15`] = `
"There's a problem with template [no name]

Parse error at character 19.
  Invalid statement: \\"a\\".
"
`;

exports[`Patterns Unexpected tokens 16`] = `
"There's a problem with template [no name]

Parse error at character 27.
  Unexpected token: \\"map\\".
"
`;

exports[`Patterns Unexpected tokens 17`] = `
"There's a problem with template [no name]

Parse error at character 27.
  Unexpected token: \\"1\\".
"
`;

exports[`Patterns Unexpected tokens 18`] = `
"There's a problem with template [no name]

Parse error at character 14.
  Unexpected token: \\"B\\".
"
`;

exports[`Patterns Unexpected tokens 19`] = `
"There's a problem with template [no name]

Parse error at character 14.
  Unexpected token: \\"1\\".
"
`;

exports[`Patterns Unexpected tokens 20`] = `
"There's a problem with template [no name]

Parse error at character 6.
  Unexpected token: \\"1\\".
"
`;

exports[`Patterns You can't bind a value more than once. 1`] = `
"There's a problem with template [no name]

Pattern matching error at character 21.
  \\"x\\" is bound multiple times in this pattern.
"
`;

exports[`Rendering Error messages display component name correctly 1`] = `
"There's a problem with template A

Render error at character 4.
  \\"a\\" is a null. I can only echo strings and numbers.
"
`;

exports[`Rendering Missing bindings 1`] = `
"There's a problem with template [no name]

Render error at character 4.
  \\"z\\" is a null. I can only echo strings and numbers.
"
`;

exports[`Rendering Missing bindings 2`] = `
"There's a problem with template [no name]

Render error at character 4.
  Template child \\"Z\\" does not exist.
"
`;

exports[`Rendering Missing bindings 3`] = `
"There's a problem with template [no name]

Parse error at character 4.
  Component \\"Z\\" does not exist.
"
`;

exports[`Rendering Missing bindings 4`] = `
"There's a problem with template [no name]

Render error at character 4.
  Template child \\"C\\" does not exist.
"
`;

exports[`Rendering Type mismatches 1`] = `
"There's a problem with template [no name]

Type error at character 8.
  \\"a\\" is a string. I can only map arrays.
"
`;

exports[`Rendering Type mismatches 2`] = `
"There's a problem with template [no name]

Type error at character 8.
  \\"b\\" is a boolean. I can only map arrays.
"
`;

exports[`Rendering Type mismatches 3`] = `
"There's a problem with template [no name]

Type error at character 8.
  \\"a\\" is a string. I can only map arrays.
"
`;

exports[`Rendering Type mismatches 4`] = `
"There's a problem with template [no name]

Render error at character 4.
  \\"b\\" is a boolean. I can only echo strings and numbers.
"
`;

exports[`Rendering Type mismatches 5`] = `
"There's a problem with template [no name]

Render error at character 4.
  \\"c\\" is a array. I can only echo strings and numbers.
"
`;

exports[`Rendering Type mismatches 6`] = `
"There's a problem with template [no name]

Render error at character 8.
  \\"b\\" is a boolean. I can only echo strings and numbers.
"
`;
